@@ -26,6 +26,7 @@ import org.jhotdraw.draw.handle.BoundsOutlineHandle;
 import org.jhotdraw.draw.handle.FontSizeHandle;
 import org.jhotdraw.draw.handle.Handle;
 import org.jhotdraw.draw.handle.MoveHandle;
+import org.jhotdraw.draw.handle.RotateHandle;
 import org.jhotdraw.draw.locator.RelativeLocator;
 import org.jhotdraw.draw.tool.TextEditingTool;
 import org.jhotdraw.draw.tool.Tool;
@@ -40,13 +41,23 @@ import org.jhotdraw.util.ResourceBundleUtil;
  * <p>A DrawingEditor should provide the {@link org.jhotdraw.draw.tool.TextCreationTool} to create a
  * {@code TextFigure}.
  */
-public class TextFigure extends AbstractAttributedDecoratedFigure implements TextHolderFigure {
+public class TextFigure extends AbstractAttributedDecoratedFigure
+    implements TextHolderFigure, Origin, Rotation {
 
   private static final long serialVersionUID = 1L;
   protected Point2D.Double origin = new Point2D.Double();
+
+  public static final Point2D.Double HOIZONTAL_DIRECTION = new Point2D.Double(1, 0);
+
+  // always starting from 0,0
+  protected Point2D.Double direction = new Point2D.Double(1, 0);
+
   protected boolean editable = true;
   // cache of the TextFigure's layout
   protected transient TextLayout textLayout;
+
+  protected double alignX;
+  protected double alignY;
 
   public TextFigure() {
     this(
@@ -68,9 +79,18 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
   @Override
   protected void drawText(java.awt.Graphics2D g) {
     if (getText() != null || isEditable()) {
-      TextLayout layout = getTextLayout();
+      TextLayout layout =
+          getTextLayout(
+              AttributeKeys.getGlobalValueFactor(
+                  this, AttributeKeys.getScaleFactorFromGraphics(g)));
       Graphics2D g2 = (Graphics2D) g.create();
       try {
+        double alignDeltaX = layout.getAdvance() * attr().get(AttributeKeys.ALIGN_RELATIVE_X);
+        double alignDeltaY =
+            (layout.getAscent() + layout.getDescent()) * attr().get(AttributeKeys.ALIGN_RELATIVE_Y);
+
+        // g2.draw(getBounds(AttributeKeys.getScaleFactorFromGraphics(g)));
+
         // Test if world to screen transformation mirrors the text. If so it tries to
         // unmirror it.
         if (g2.getTransform().getScaleY() * g2.getTransform().getScaleX() < 0) {
@@ -78,9 +98,18 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
           at.translate(0, origin.y + layout.getAscent() / 2);
           at.scale(1, -1);
           at.translate(0, -origin.y - layout.getAscent() / 2);
+          at.rotate(direction.x, -direction.y, origin.x, origin.y + layout.getAscent());
           g2.transform(at);
+        } else {
+          g2.transform(rotationMatrix());
         }
-        layout.draw(g2, (float) origin.x, (float) (origin.y + layout.getAscent()));
+
+        // to avoid float imprecisions
+        AffineTransform at2 = new AffineTransform();
+        at2.translate(origin.x, origin.y);
+        g2.transform(at2);
+
+        layout.draw(g2, (float) (-alignDeltaX), (float) (+alignDeltaY + layout.getAscent()));
       } finally {
         g2.dispose();
       }
@@ -90,7 +119,11 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
   // SHAPE AND BOUNDS
   @Override
   public void transform(AffineTransform tx) {
+    Point2D.Double dirVector = new Point2D.Double(origin.x + direction.x, origin.y + direction.y);
     tx.transform(origin, origin);
+    tx.transform(dirVector, dirVector);
+    direction.x = dirVector.x - origin.x;
+    direction.y = dirVector.y - origin.y;
   }
 
   @Override
@@ -99,22 +132,52 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
   }
 
   @Override
-  public boolean figureContains(Point2D.Double p) {
-    if (getBounds().contains(p)) {
-      return true;
-    }
-    return false;
+  public void setRotation(double angle) {
+    AffineTransform.getRotateInstance(angle).transform(HOIZONTAL_DIRECTION, direction);
   }
 
-  protected TextLayout getTextLayout() {
-    if (textLayout == null) {
+  @Override
+  public Point2D.Double getOrigin() {
+    return origin;
+  }
+
+  @Override
+  public void setOrigin(Point2D.Double origin) {
+    this.origin = origin;
+  }
+
+  public Point2D.Double getDirection() {
+    return direction;
+  }
+
+  public void setDirection(Point2D.Double direction) {
+    this.direction = direction;
+  }
+
+  @Override
+  public boolean figureContains(Point2D.Double p, double scale) {
+    double grow =
+        AttributeKeys.getPerpendicularHitGrowth(
+                this, AttributeKeys.getGlobalValueFactor(this, scale))
+            + 1d;
+    Rectangle2D.Double r = getBounds(scale);
+    Geom.grow(r, grow, grow);
+    return r.contains(p);
+  }
+
+  protected TextLayout getTextLayout(double sizeFactor) {
+    if (textLayout == null || attr().get(IS_STROKE_PIXEL_VALUE)) {
       String text = getText();
       if (text == null || text.length() == 0) {
         text = " ";
       }
       FontRenderContext frc = getFontRenderContext();
       HashMap<TextAttribute, Object> textAttributes = new HashMap<>();
-      textAttributes.put(TextAttribute.FONT, getFont());
+      textAttributes.put(
+          TextAttribute.FONT,
+          getFont()
+              .deriveFont(
+                  getFontSize() / (float) AttributeKeys.getGlobalValueFactor(this, sizeFactor)));
       if (attr().get(FONT_UNDERLINE)) {
         textAttributes.put(TextAttribute.UNDERLINE, TextAttribute.UNDERLINE_LOW_ONE_PIXEL);
       }
@@ -124,46 +187,74 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
   }
 
   @Override
-  public Rectangle2D.Double getBounds() {
-    TextLayout layout = getTextLayout();
+  public Rectangle2D.Double getBounds(double scale) {
+    TextLayout layout = getTextLayout(scale);
+
+    double alignDeltaX = layout.getAdvance() * attr().get(AttributeKeys.ALIGN_RELATIVE_X);
+    double alignDeltaY =
+        (layout.getAscent() + layout.getDescent()) * attr().get(AttributeKeys.ALIGN_RELATIVE_Y);
+
     Rectangle2D.Double r =
         new Rectangle2D.Double(
-            origin.x, origin.y, layout.getAdvance(), layout.getAscent() + layout.getDescent());
+            origin.x - alignDeltaX,
+            origin.y - alignDeltaY,
+            layout.getAdvance(),
+            layout.getAscent() + layout.getDescent());
+
+    r = (Rectangle2D.Double) rotationMatrix().createTransformedShape(r).getBounds2D();
+
     return r;
   }
 
   @Override
-  public Dimension2DDouble getPreferredSize() {
-    Rectangle2D.Double b = getBounds();
+  public Dimension2DDouble getPreferredSize(double scale) {
+    Rectangle2D.Double b = getBounds(scale);
     return new Dimension2DDouble(b.width, b.height);
   }
 
   @Override
   public double getBaseline() {
-    TextLayout layout = getTextLayout();
+    TextLayout layout = getTextLayout(AttributeKeys.scaleFromContext(this));
     return origin.y + layout.getAscent() - getBounds().y;
+  }
+
+  private AffineTransform rotationMatrix() {
+    return AffineTransform.getRotateInstance(direction.x, direction.y, origin.x, origin.y);
   }
 
   /** Gets the drawing area without taking the decorator into account. */
   @Override
-  protected Rectangle2D.Double getFigureDrawingArea() {
+  protected Rectangle2D.Double getFigureDrawingArea(double factor) {
     if (getText() == null) {
-      return getBounds();
+      return getBounds(factor);
     } else {
-      TextLayout layout = getTextLayout();
+      TextLayout layout = getTextLayout(factor);
+
+      double alignDeltaX = layout.getAdvance() * attr().get(AttributeKeys.ALIGN_RELATIVE_X);
+      double alignDeltaY =
+          (layout.getAscent() + layout.getDescent()) * attr().get(AttributeKeys.ALIGN_RELATIVE_Y);
+
       Rectangle2D.Double r =
-          new Rectangle2D.Double(origin.x, origin.y, layout.getAdvance(), layout.getAscent());
+          new Rectangle2D.Double(
+              origin.x - alignDeltaX,
+              origin.y - alignDeltaY,
+              layout.getAdvance(),
+              layout.getAscent() + layout.getDescent());
       Rectangle2D lBounds = layout.getBounds();
       if (!lBounds.isEmpty() && !Double.isNaN(lBounds.getX())) {
         r.add(
             new Rectangle2D.Double(
-                lBounds.getX() + origin.x,
-                (lBounds.getY() + origin.y + layout.getAscent()),
+                lBounds.getX() + origin.x - alignDeltaX,
+                (lBounds.getY() + origin.y - alignDeltaY + layout.getAscent()),
                 lBounds.getWidth(),
                 lBounds.getHeight()));
       }
+
+      r = (Rectangle2D.Double) rotationMatrix().createTransformedShape(r).getBounds2D();
+
       // grow by two pixels to take antialiasing into account
       Geom.grow(r, 2d, 2d);
+
       return r;
     }
   }
@@ -235,7 +326,7 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
 
   @Override
   public void setFontSize(float size) {
-    attr().set(FONT_SIZE, new Double(size));
+    attr().set(FONT_SIZE, Double.valueOf(size));
   }
 
   @Override
@@ -268,6 +359,16 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
         handles.add(new MoveHandle(this, RelativeLocator.southEast()));
         handles.add(new FontSizeHandle(this));
         break;
+      case 1:
+        handles.add(new BoundsOutlineHandle(this));
+        handles.add(
+            new RotateHandle(this) {
+              @Override
+              protected Point2D.Double getCenter() {
+                return TextFigure.this.getOrigin();
+              }
+            });
+        break;
     }
     return handles;
   }
@@ -276,6 +377,9 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
    * Returns a specialized tool for the given coordinate.
    *
    * <p>Returns null, if no specialized tool is available.
+   *
+   * @param p
+   * @return
    */
   @Override
   public Tool getTool(Point2D.Double p) {
@@ -306,6 +410,7 @@ public class TextFigure extends AbstractAttributedDecoratedFigure implements Tex
   public TextFigure clone() {
     TextFigure that = (TextFigure) super.clone();
     that.origin = (Point2D.Double) this.origin.clone();
+    that.direction = (Point2D.Double) this.direction.clone();
     that.textLayout = null;
     return that;
   }
